# Multi-Agent-Query-Resolution

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  customer_support_agent.py  instructions.py  knowledge_agent.py  models.py  pyproject.toml  requirements.txt  response_model.py  results.json  router_agent.py  workflow.py
agents/: __init__.py  customer_support_agent.py  knowledge_agent.py  router_agent.py  workflow.py
tests/: conftest.py  test_customer_support_agent.py  test_integration.py  test_knowledge_agent.py  test_router_agent.py  test_workflow.py
utils/: __init__.py  instructions.py  logger.py  models.py
