[project]
name = "cloudwalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.5.8",
    "beautifulsoup4>=4.13.4",
    "mistralai>=1.8.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "tavily-python>=0.7.4",
]
