[project]
name = "cloudwalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.5.8",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.12",
    "fastapi>=0.115.9",
    "mistralai>=1.8.1",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.4",
    "uvicorn>=0.34.3",
]
